--- a/FamHub.1.0.0/Views/Home/Acceuil.cshtml
+++ b/FamHub.1.0.0/Views/Home/Acceuil.cshtml
@@ -12,8 +12,12 @@
 <body>
     <form method="post">
         <p>
-            <label for=""
+            <label>Pseudo ou Email :</label>
         </p>
+        <p>
+            <label>Mot de passe :</label>
+        </p>
+        
     </form>
 </body>
 </html>
