ajout d'un lien hypertext dans la vu Acceuil qui renvoit vers la methode CreationCompte dans le controleur Home Creation de la methode CreationCompte

--- a/FamHub.1.0.0/Views/Home/Acceuil.cshtml
+++ b/FamHub.1.0.0/Views/Home/Acceuil.cshtml
@@ -1,7 +1,7 @@
-﻿@Model FamHub._1._0._0.Models.Utilisateurs
+﻿
 
 @{
-    ViewData["Title"] = "Acceuil";
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -17,7 +17,10 @@
         <p>
             <label>Mot de passe :</label>
         </p>
-        
+        <button type="submit">Connexion</button>
+        <p>
+            <a asp-action="CreationCompte">creer un compte</a>
+        </p>
     </form>
 </body>
 </html>
