correction du nom de la vue CreationCompte

--- a/FamHub.1.0.0/Views/Home/CreationCompte.cshtml
+++ b/FamHub.1.0.0/Views/Home/CreationCompte.cshtml
@@ -5,8 +5,10 @@
     Créer votre compte
 </head>
 <body>
-    <form action="">
+    <form action="CreationCompte" method="post">
+        <p>
 
+        </p>
     </form>
 </body>
 </html>
